--- a/scss/_layout.scss
+++ b/scss/_layout.scss
@@ -5,7 +5,7 @@
   top: 0;
   left: 0;
   width: 100vw;
-  height: 100vh;
+  height: 100%;
   background-color: rgba(0, 0, 0, 0.7);
   display: none;
   /* display: flex; */
@@ -21,10 +21,12 @@ body,html{
 .l-overlay-content{
   width: 70vw;
   max-height: 100vh;
-  height: 100vh;
   background-color: white;
   position: absolute;
   overflow: auto;
+  @media (max-width: 600px) {
+  width: 95vw;
+  }
 }
 
 // HEADER NAV
