--- a/css/style.css
+++ b/css/style.css
@@ -7619,7 +7619,7 @@ p {
   top: 0;
   left: 0;
   width: 100vw;
-  height: 100%;
+  height: 100vh;
   background-color: rgba(0, 0, 0, 0.7);
   display: none;
   /* display: flex; */
@@ -7631,14 +7631,15 @@ body, html {
   /* overflow: hidden; */ }
 
 .l-overlay-content {
-  width: 70vw;
+  width: 95vw;
   max-height: 100vh;
+  height: 100vh;
   background-color: white;
   position: absolute;
   overflow: auto; }
-  @media (max-width: 600px) {
+  @media (min-width: 600px) {
     .l-overlay-content {
-      width: 95vw; } }
+      width: 70vw; } }
 
 .l-fern {
   background-image: url("images/fern.png");
