--- a/scss/_base.scss
+++ b/scss/_base.scss
@@ -4,6 +4,11 @@
 	margin: 0;
 }
 
+html, body{
+	width: 100%;
+	overflow-x: hidden;
+}
+
 h1{
   font-family: 'Damion', cursive;
   font-size: 2.9em;
